# G-W

./: .gitignore  README.md  add-rotina.ps1  main.py  pyproject.toml  requirements.txt  s3.py  uploads3.ps1
