[tool.poetry]
name = "oficina"
version = "0.1.0"
description = ""
authors = ["AriHenrique <arihenriquedev@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyodbc = "^5.0.1"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
sqlalchemy = "^2.0.23"
pyinstaller = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
